--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,12 +1,9 @@
 data/dev.bragefuglseth.Fretboard.desktop.in.in
 data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
 data/dev.bragefuglseth.Fretboard.gschema.xml
-data/gtk/barre-spin.blp
-data/gtk/chord-name-entry.blp
-src/chord_name_entry.rs
-data/gtk/help-overlay.blp
-data/gtk/window.blp
-src/application.rs
-src/chord_diagram_top_toggle.rs
-src/main.rs
-src/window.rs
+data/resources/gtk/help-overlay.ui
+src/widgets/barre_spin.blp
+src/widgets/chord_diagram_top_toggle.rs
+src/widgets/chord_name_entry.blp
+src/widgets/window.blp
+src/widgets/window.rs
