--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,5 @@ features = ["v4_16", "blueprint"]
 
 [dependencies.adw]
 package = "libadwaita"
-git = "https://gitlab.gnome.org/msandova/libadwaita-rs.git" # Change back to crates.io version when it has been updated
-branch = "v0.7-adw-toggles-2"
-features = ["v1_7"]
+version = "0.7"
+features = ["v1_6"]
