--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 ko_fi: bragefuglseth
-custom: ['https://www.paypal.me/octocat', 'https://qr.vipps.no/box/c18bade5-d2c3-48a2-91ec-2eb235590bea/pay-in', 'https://qr.mobilepay.dk/box/c18bade5-d2c3-48a2-91ec-2eb235590bea/pay-in']
+custom: ['https://www.paypal.me/bragefuglseth', 'https://qr.vipps.no/box/c18bade5-d2c3-48a2-91ec-2eb235590bea/pay-in', 'https://qr.mobilepay.dk/box/c18bade5-d2c3-48a2-91ec-2eb235590bea/pay-in']
