Add D-Bus service file
And mark the application as D-Bus activatable. This allows application
launchers to activate it via D-Bus.

--- a/data/dev.bragefuglseth.Fretboard.desktop.in.in
+++ b/data/dev.bragefuglseth.Fretboard.desktop.in.in
@@ -8,5 +8,6 @@ Type=Application
 Categories=Education;GTK;GNOME
 Keywords=guitar;chords
 StartupNotify=true
+DBusActivatable=true
 # Translators: Do NOT translate or transliterate this text (these are enum types)!
 X-Purism-FormFactor=Workstation;Mobile;
